--- a/Multilingual_CLIP.ipynb
+++ b/Multilingual_CLIP.ipynb
@@ -20,19 +20,43 @@
       "version": "3.7.6"
     },
     "colab": {
-      "name": "Multilingual_CLIP.ipynb",
-      "provenance": []
+      "name": "Copy of Multilingual_CLIP.ipynb",
+      "provenance": [],
+      "toc_visible": true,
+      "include_colab_link": true
     },
     "accelerator": "GPU"
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/FreddeFrallan/Multilingual-CLIP/blob/main/Multilingual_CLIP.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "2bmfoDXVoAh3"
+      },
+      "source": [
+        "# Multilingual CLIP\n",
+        "\n",
+        "## Install Packages and Setup\n",
+        "Run this to configure everything, this might take some minutes."
+      ]
+    },
     {
       "cell_type": "code",
       "metadata": {
         "id": "v5JU97PayTvv"
       },
       "source": [
-        "#@title Installing packages, doing imports & downloading weights\n",
+        "#@title  { display-mode: \"code\" }\n",
         "\n",
         "import subprocess\n",
         "CUDA_version = [s for s in subprocess.check_output([\"nvcc\", \"--version\"]).decode(\"UTF-8\").split(\", \") if s.startswith(\"release\")][0].split(\" \")[-1]\n",
@@ -54,8 +78,8 @@
         "import os\n",
         "import random\n",
         "\n",
+        "from PIL import Image\n",
         "import numpy as np\n",
-        "import PIL\n",
         "import torch\n",
         "\n",
         "import warnings\n",
@@ -72,25 +96,35 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8ssQbLEFoksN"
+      },
+      "source": [
+        "### Load The Multilingual Text Encoder"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "4QMUva872Fr7"
       },
       "source": [
-        "from src.multilingual_clip import MultilingualClip\n",
+        "from src import multilingual_clip\n",
         "\n",
-        "model_path = 'M-CLIP/Swedish-500k'\n",
-        "tok_path = 'M-CLIP/Swedish-500k'\n",
-        "head_weight_path = 'data/weights/Swedish-500k Linear Weights.pkl'\n",
-        "\n",
-        "sweclip_args = {'model_name': model_path,\n",
-        "                'tokenizer_name': tok_path,\n",
-        "                'head_path': head_weight_path}\n",
-        "\n",
-        "sweclip = MultilingualClip(**sweclip_args)"
+        "text_model = multilingual_clip.load_model('M-BERT-Distil-40')"
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "56aiJ7CspXWd"
+      },
+      "source": [
+        "### Load The Matching CLIP Model"
+      ]
     },
     {
       "cell_type": "code",
@@ -113,13 +147,69 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AleQ_9u5r_FN"
+      },
+      "source": [
+        "### Prepare Image Function"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PDvfAOlOruTq"
+      },
+      "source": [
+        "def prepare_images(compose, img_paths, device):\n",
+        "  return [preprocess(Image.open(p)).unsqueeze(0).to(device) for p in img_paths]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "jcl1enIJxKT9"
+      },
+      "source": [
+        "### Read in the Images"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-0bjULNmxPW5"
+      },
+      "source": [
+        "from PIL import Image\n",
+        "main_path = '/content/Multilingual-CLIP/Images/'\n",
+        "demo_images = {\n",
+        "    'Green Apple': 'green apple.jpg',\n",
+        "    'Red Apple': 'red apple.jpg',\n",
+        "    'Purple Apple': 'purple apple.png',\n",
+        "    'Orange Apple': 'Orange Apple.png',\n",
+        "    'Happy Person': 'happy person.jpg',\n",
+        "    'Sad Person': 'sad.jpg',\n",
+        "}\n",
+        "\n",
+        "import os\n",
+        "#for p in demo_images.values():\n",
+        "for p in os.listdir(main_path):\n",
+        "  print(os.path.isfile(main_path + p))\n",
+        "\n",
+        "#images = {name: Image.open(main_path + p) for name, p in demo_images.items()}"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "vkysmzvTFs7I"
       },
       "source": [
         "from torchvision.transforms import Compose, Resize, CenterCrop, ToTensor, Normalize\n",
-        "from PIL import Image\n",
         "\n",
         "preprocess = Compose([\n",
         "    Resize(input_resolution, interpolation=Image.BICUBIC),\n",
@@ -168,9 +258,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "s96GWDBFFODv"
+        "id": "s96GWDBFFODv",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 248
+        },
+        "outputId": "7dc64e2c-c731-4602-82aa-80503156b992"
       },
       "source": [
+        "import matplotlib.pyplot as plt\n",
         "images = []\n",
         "texts = []\n",
         "plt.figure(figsize=(16, 5))\n",
@@ -193,7 +289,30 @@
         "plt.tight_layout()"
       ],
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-8-2901168318c0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m16\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0mfilename\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mfilename\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mfilename\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlistdir\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mskimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata_dir\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".png\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mfilename\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mendswith\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\".jpg\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplitext\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilename\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mname\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdescriptions\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'skimage' is not defined"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<Figure size 1152x360 with 0 Axes>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
+      ]
     },
     {
       "cell_type": "code",
