--- a/Multilingual_CLIP.ipynb
+++ b/Multilingual_CLIP.ipynb
@@ -156,12 +156,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "w4CyQ2tl8dKd",
-        "outputId": "7dd80aa8-44c1-45aa-f56a-ba5d28266c4e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 232
-        }
+        },
+        "id": "w4CyQ2tl8dKd",
+        "outputId": "7dd80aa8-44c1-45aa-f56a-ba5d28266c4e"
       },
       "source": [
         "main_path = '/content/Multilingual-CLIP/Images/'\n",
@@ -244,8 +244,7 @@
         "id": "PDvfAOlOruTq"
       },
       "source": [
-        "img_input = torch.stack([compose(img).to('cpu') for img in images.values()])\n",
-        "print(img_input.shape)"
+        "img_input = torch.stack([compose(img).to('cpu') for img in images.values()])"
       ],
       "execution_count": null,
       "outputs": []
