Fix typo: Spansh -> Spanish

--- a/Multilingual_CLIP.ipynb
+++ b/Multilingual_CLIP.ipynb
@@ -224,7 +224,7 @@
         "  'Ein grüner Apfel', 'Ein roter Apfel', 'Ein lila Apfel', 'Ein orangefarbener Apfel', 'Eine Schüssel voller Früchte', 'Ein Bündel Bananen hängt an einem Baum'           \n",
         "]\n",
         "\n",
-        "spansh_captions = [\n",
+        "spanish_captions = [\n",
         "    'Una manzana verde', 'Una manzana roja', 'Una manzana de color lila', 'Una manzana de color naranja', 'Un frutero lleno de fruta', 'Un racimo de bananas colgados de un banano',\n",
         "]\n",
         "\n",
@@ -237,7 +237,7 @@
         "]\n",
         "\n",
         "all_captions = {'Russian': russan_captions, 'French': french_captions, 'German': german_captions,\n",
-        "                'Spanish': spansh_captions, 'Greek': greek_captions, 'Swedish': swedish_captions\n",
+        "                'Spanish': spanish_captions, 'Greek': greek_captions, 'Swedish': swedish_captions\n",
         "                }"
       ],
       "execution_count": 16,
